Motif Edit: Properties List: Css bug-fixes  - 'slide' animation of properties tables. "Overflow: hidden" applies only during animation (fixes clipped dropdowns)  - changed styling class from "tableHeading" to "headedTable". Fixes 'leakage' of the bold styling into <table> elements (still don't know why this spontaneously became an issue).  - changed width and height of <input> elements nested in <table>, which caused a visual bug (why did this spontaneously become an issue?)

--- a/react-pgt/public/css/Motf/MotfEdit_SubSec_mElemExpanded.css
+++ b/react-pgt/public/css/Motf/MotfEdit_SubSec_mElemExpanded.css
@@ -67,19 +67,26 @@
 
 /* Rules Here related to Tables and table content */
 
-.MotfEdit_SubSec_mElemExpanded div.tableHeading{
+.MotfEdit_SubSec_mElemExpanded div.headedTable{
+    color: #777;
+}
+
+.MotfEdit_SubSec_mElemExpanded div.headedTable span{
     font-weight: bold;
     font-size: 12px;
-    color: #777;
+}
+
+.MotfEdit_SubSec_mElemExpanded div.headedTable.WgSlide400-enter.WgSlide400-enter-active,
+.MotfEdit_SubSec_mElemExpanded div.headedTable.WgSlide400-leave{
     overflow: hidden; /* for height animation...*/
 }
 
-.MotfEdit_SubSec_mElemExpanded .tableHeading:not(.pos_size){
+.MotfEdit_SubSec_mElemExpanded .headedTable:not(.pos_size){
     margin-top: 8px;
 }
 
 /* temporary styling... */
-.MotfEdit_SubSec_mElemExpanded div.tableHeading > div{
+.MotfEdit_SubSec_mElemExpanded div.headedTable > div{
     font-weight: normal;
     margin-left: 20px;
     font-size: 10px;
@@ -136,7 +143,6 @@ div.WgSlide400-leave.WgSlide400-leave-active {
 .MotfEdit_SubSec_mElemExpanded table{
     background: #ccc;
     border-spacing: 1px;
-    color: #777;
     font-size: 11px;
     margin-top: 1px;
 }
@@ -169,8 +175,8 @@ div.WgSlide400-leave.WgSlide400-leave-active {
 
 .MotfEdit_SubSec_mElemExpanded td.valu > input{
     border: none;
-    width: 100%;
-    height: 14px;
+    width: 136px;
+    height: 12px;
     font-size: 11px;
     color: #777;
     background: #f9f9f9;
